packages/jsii/test/negatives/neg.expose-unexported-type-constructor-param.ts
import { UnexportedProps } from './_unexported';

export class ExportedClass {
  public readonly name: string;

  public constructor(props: UnexportedProps) {
    this.name = props.name;
  }
}
